# DevTerminal--OS

./: DEVELOPMENT.md  README.md
backend/: CMakeLists.txt
backend/include/: database.h
backend/src/: auth.cpp  database.cpp  filesystem.cpp  main.cpp  monitor.cpp  terminal.cpp  utils.cpp
database/: schema.sql
frontend/: dashboard.html  explorer.html  index.html  login.html  terminal.html
frontend/css/: animations.css  dashboard.css  explorer.css  style.css  terminal.css
frontend/js/: api.js  app.js  boot.js  dashboard.js  explorer.js  login.js  terminal.js
